--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,21 @@ body, html {
   justify-content: center;
 }
 
+.block.image.contained {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  border-radius: 0;
+  background: #eee;
+}
+
+.block.text.contained {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  border-radius: 0;
+}
+
 .block-wrapper {
   display: flex;
   flex-wrap: wrap;
