--- a/styles.css
+++ b/styles.css
@@ -5,6 +5,15 @@ body, html {
   padding: 0;
 }
 
+hr {
+  border: 0;
+  clear:both;
+  display:block;
+  width: 96%;               
+  background-color:#eee;
+  height: 1px;
+}
+
 #email-grid {
   width: 600px;
   min-height: 150px;
@@ -54,6 +63,20 @@ body, html {
   width: 100%;
   height: 100%;
   margin: 0;
+  border-radius: 0;
+}
+
+.block.text.uncontained {
+  width: 100%;
+  margin: 0;
+  border: 0;
+  border-radius: 0;
+}
+
+.block.spacer.uncontained {
+  width: 100%;
+  margin: 0;
+  border: 0;
   border-radius: 0;
 }
 
