--- a/styles.css
+++ b/styles.css
@@ -122,14 +122,14 @@ hr {
 
 }
 
-.col-100-item {
+.col-100-item-container {
   width: 100%;
   height: 100%;
   background: aliceblue;
   border: 1px dashed skyblue;
 }
 
-.col-66-item {
+.col-66-item-container {
   width: 65%;
   height: 100%;
   display: inline-block;
@@ -137,7 +137,7 @@ hr {
   border: 1px dashed skyblue;
 }
 
-.col-50-item {
+.col-50-item-container {
   width: 49%;
   height: 100%;
   display: inline-block;
@@ -145,7 +145,7 @@ hr {
   border: 1px dashed skyblue;
 }
 
-.col-33-item {
+.col-33-item-container {
   width: 32%;
   height: 100%;
   display: inline-block;
@@ -153,7 +153,7 @@ hr {
   border: 1px dashed skyblue;
 }
 
-.col-25-item {
+.col-25-item-container {
   width: 23.5%;
   height: 100%;
   display: inline-block;
