--- a/styles.css
+++ b/styles.css
@@ -118,8 +118,8 @@ hr {
   justify-content: space-between;
 }
 
-.col-100:hover, .col-50-50:hover, .col-33:hover, .col-25:hover, .col-33-66:hover, .col-66-33:hover {
-
+.col.hovered {
+  border: 1px solid #364347 !important;
 }
 
 .col-100-item-container {
@@ -165,6 +165,7 @@ hr {
   border: 0;
   width: 100%;
   height: 100px;
+  padding: 12px;
 }
 
 .empty-structure-block > div {
