--- a/styles.css
+++ b/styles.css
@@ -165,7 +165,7 @@ hr {
   border: 0;
   width: 100%;
   height: 100px;
-  padding: 12px;
+  padding: 10px 16px;
 }
 
 .empty-structure-block > div {
