--- a/styles.css
+++ b/styles.css
@@ -15,10 +15,10 @@ hr {
 }
 
 #email-grid {
-  width: 600px;
+  width: 100%;
   min-height: 150px;
   margin: 10% auto 0;
-  background: #fff;
+  background: #f5f5f5;
 }
 
 #email-builder {
@@ -39,7 +39,7 @@ hr {
 
 .block {
   width: 33%;
-  margin: 14px;
+  margin: 4%;
   height: 100px;
   display: flex;
   flex: 1 0 20%;
@@ -118,6 +118,16 @@ hr {
   justify-content: space-between;
 }
 
+.col-100.placed-structure-block, 
+.col-50-50.placed-structure-block, 
+.col-33.placed-structure-block, 
+.col-25.placed-structure-block, 
+.col-33-66.placed-structure-block, 
+.col-66-33.placed-structure-block {
+  padding: 0;
+  margin: 0 auto;
+}
+
 .col.hovered {
   border: 1px solid #364347 !important;
 }
@@ -161,14 +171,22 @@ hr {
   border: 1px dashed skyblue;
 }
 
-.empty-structure-block {
-  border: 0;
-  width: 100%;
-  height: 100px;
-  padding: 10px 16px;
+.col-100-item-container.nested,
+.col-66-item-container.nested,
+.col-50-item-container.nested,
+.col-33-item-container.nested,
+.col-25-item-container.nested {
+  height: 80%;
+  margin: 10px;
 }
 
-.empty-structure-block > div {
+.placed-structure-block {
+  border: 0;
+  width: 600px;
+  height: 100px;
+}
+
+.placed-structure-block > div {
   display: flex;
   color: skyblue;
   align-items: center;
@@ -220,7 +238,11 @@ hr {
    -khtml-user-select: none; 
      -moz-user-select: none; 
       -ms-user-select: none; 
-          user-select: none;
+      user-select: none;
+}
+
+.row-wrapper:hover {
+  border: 1px solid #364347;
 }
 
 .settings-nav {
