--- a/styles.css
+++ b/styles.css
@@ -106,6 +106,21 @@ hr {
   background: #fff;
 }
 
+.close-panel {
+  top: 0;
+  right: 0;
+  width: 40px;
+  height: 40px;
+  color: #555;
+  text-align: center;
+  position: absolute;
+  border-left: 1px solid #e6e6e6;
+}
+
+.close-panel > i {
+  padding: 12px;
+}
+
 .col-100, .col-50-50, .col-33, .col-25, .col-33-66, .col-66-33 {
   height: 48px;
   width: 90%;
@@ -181,6 +196,43 @@ hr {
   margin: 10px;
 }
 
+#content-settings {
+  right: 0;
+  top: 20%;
+  z-index: 1;
+  height: 80%;
+  width: 100%;
+  position: absolute;
+  transition: all 1s ease-in-out;
+}
+
+#content-settings.hider {
+  top: 100%;
+}
+
+.content-settings-header {
+  top: 0;
+  color: #555;
+  height: 40px;
+  width: 100%;
+  position: absolute;
+  background: #fff;
+  border-bottom: 1px solid #eee;
+  box-shadow: 0 -2px 6px rgba(0,0,0,.2);
+}
+
+.content-settings-header > h5 {
+  padding-left: 10px;
+}
+
+.content-settings-body {
+  top: 40px;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background: #f5f5f5;
+}
+
 .placed-structure-block {
   border: 0;
   width: 600px;
@@ -254,32 +306,7 @@ hr {
   border: 1px solid #364347;
 }
 
-.toolbar-btn {
-  width: 36px;
-  height: 36px;
-  padding: 10px;
-  display: block;
-  transition: none;
-  text-align: center;
-  border-radius: 6px;
-  background: #364347;
-
-  position: absolute;
-  top: 300px;
-  left: 300px;
-}
-
-.toolbar-btn:hover {
-  cursor: pointer;
-  background: #5e696d;
-}
-
-.toolbar-btn > i {
-  color: #fff;
-  font-size: 16px;
-}
-
-a.tool-item {
+a.tool-item, a.close-panel {
   text-decoration: none;
 }
 
